[gd_scene load_steps=4 format=2]

[ext_resource path="res://arena/arena.tscn" type="PackedScene" id=1]
[ext_resource path="res://balls/score_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Arena" parent="." instance=ExtResource( 1 )]

[node name="ScoreBox" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="score" from="Arena" to="." method="_on_Arena_score"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="ScoreBox"]
